# swatplus-netcdf-converter

./: .gitignore  README.md  convertSWATWeather  requirements.txt  swatPlusNetCDFConverter
CPP/: CMakeLists.txt  README.md  build_release.bat
CPP/include/: Converter.h  Utils.h
CPP/src/: Converter.cpp  Utils.cpp  main.cpp
